<resources>
    <string name="app_name">DICOM_Viewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DICOM Viewer</string>
    <string name="nav_header_subtitle">Navigation bar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_file">Open File…</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="original_size">Original size</string>
    <string name="re_orientate">Re-orientate</string>
    <string name="dicom_image">DICOM Image</string>
    <string name="drag">Drag</string>
    <string name="rotate">Rotate</string>
    <string name="re_center">Re-Center</string>
    <string name="open_folder">Open folder...</string>
    <string name="recently_opened">Recently Opened:</string>
    <string name="scroll">Scroll</string>
</resources>