<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_open_file"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/open_file">
        </item>
        <item
            android:id="@+id/nav_open_folder"
            android:icon="@drawable/ic_open_folder"
            android:title="@string/open_folder">
        </item>
    </group>


    <item
        android:title="@string/recently_opened">

        <menu>
            <item android:title="TODO">

            </item>
        </menu>

    </item>


</menu>