<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/orientateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_orientate"
                android:layout_marginBottom="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:layout_marginTop="0sp" />

            <Button
                android:id="@+id/sizeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_size"
                android:layout_marginBottom="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="2sp"
                android:layout_marginTop="0sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dicom_image">

            </ImageView>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>